--- a/Demos/Module 2/InfraStructure/appsettings.json
+++ b/Demos/Module 2/InfraStructure/appsettings.json
@@ -18,5 +18,8 @@
     //    "InfraStructure.LogVictim": "Information"
     //  }
     //}
+  },
+  "ConnectionStrings": {
+    "ConStr": "In uw secrets onder brengen"
   }
 }
